# finance-tracker

./: .gitignore  MANIFEST.in  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: index.md
finance-tracker/: __INIT__.py  finance-tracker.py
finance-tracker/database/: database.py
finance-tracker/import_export/: import_export.py
finance-tracker/report/: report.py
finance_tracker/: __main__.py  argparse.py  default_data.py  finance_tracker.py  main.py  managers.py  models.py  qr_handler.py
finance_tracker/alembic/: env.py
finance_tracker/alembic/versions/: 88f1ebfdacd3_initial_revision_before_currencies.py
finance_tracker/database/: database.py  schema.sql
finance_tracker/import_export/: import_export.py
finance_tracker/report/: app.py  report.py  summary.py
finance_tracker/report/static/: style.css
finance_tracker/report/static/css/: style.css
finance_tracker/report/templates/: _macros.html  base.html  home.html  summary.html
tests/: database.py  test.py  test_argparse.py  test_database.py  test_main.py  test_managers.py  test_models.py  test_qr_handler.py
tests/report/: test_summary.py
